PG - Gestione accessi public-API ricerca deleghe
